--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -6,7 +6,11 @@
 .grid-container {
     display: grid;
     grid-template-columns: repeat(1, minmax(300px, 1fr));
+    grid-template-rows: 120px 120px 120px 120px;
+    justify-content: center;
     gap: 10px;
+    height: calc(100vh);
+    position: relative;
 }
 
 @media (min-width: $break-s) {
@@ -18,7 +22,8 @@
 
 @media (min-width: $break-m) {
     .grid-container {
-        grid-template-columns: repeat(3, 400px);
+        grid-template-columns: repeat(3, 350px);
         gap: 25px;
+        margin: 0 auto;
     }
 }
